KSENROLL-4392: fixed context bar lozenge style. the border was too big.
git-svn-id: https://svn.kuali.org/repos/student/enrollment/ks-enroll/trunk@49210 0ac02d80-fb3f-11dc-a574-c57244a850eb

--- a/ks-enroll-web/src/main/webapp/ks-enroll/css/enroll.css
+++ b/ks-enroll-web/src/main/webapp/ks-enroll/css/enroll.css
@@ -617,9 +617,14 @@ a {
     padding-right: 20px;
 }
 
-#contextBarTermCode, #contextBarSocState {
+#contextBarTermCode {
     padding-top: 8px;
     padding-left: 15px;
+}
+
+#contextBarSocState {
+    margin-top: 6px;
+
 }
 /*
 
